--- a/pages/addNote/addNote.wxml
+++ b/pages/addNote/addNote.wxml
@@ -3,7 +3,7 @@
   <view class='head'>
    <view wx:if="{{index<=8}}" wx:for="{{arr1}}" data-id="{{index}}">
    <view style='position:absolute;margin-left:22px;margin-top:5rpx;color:#ddd;' data-id="{{index}}" bindtap='delete' class='iconfont2 icon-cha'></view>
-   <image mode='aspectFill' class='item' src="{{item}}"></image>
+   <image data-item="{{item}}" bindtap='previewImage' mode='aspectFill' class='item' src="{{item}}"></image>
    </view>
    <image wx:if="{{check}}" bindtap='add' class='addimg' src='../../images/add.png'></image>
    
