--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -17,9 +17,12 @@
   position: fixed;
   bottom: 0rpx;
   width: 100%;
-  height: 100rpx;
+  height: 80rpx;
   background-color: #333333;
-  padding-top: 30rpx;
+  padding-top: 25rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 .line{
   width: 4rpx;
