--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,9 +1,9 @@
 /* pages/mine/mine.wxss */
-@import '../member/member.wxss';
+/* @import '../member/member.wxss'; */
 @import '../indexo/indexo.wxss';
 page{
   height: 100%;
-  width: 750rpx;
+  /* width: 750rpx; */
   background-color: #f4f8fb;
 }
 .index-profile__img {
@@ -29,7 +29,7 @@ page{
  
 }
 .head{
-  width:750rpx;
+  /* width:750rpx; */
  
   background-color: #fff;
 }
@@ -67,7 +67,7 @@ text-align:center;
   margin-left: 20rpx;
 }
 .border{
-  width: 100%;
+  /* width: 100%; */
   height: 2rpx;
   background-color: #f5f5f5;
   margin-top: 30rpx;
@@ -79,12 +79,13 @@ flex-direction:row;
 background-color: #fff;
 margin-top:25rpx;
 font-size:30rpx;
-margin-left: 240rpx;
+
 color: #b6b6b6;
 
 }
 .item1{
   width: 60rpx;
+  margin-left: 240rpx;
 }
 .item2{
   width: 60rpx;
@@ -99,26 +100,16 @@ color: #b6b6b6;
   color:#5a5d5f;
 }
 .line2{
- width: 100%;
+ /* width: 100%; */
  height: 6rpx;
  background-color: #f6f7f8;
  margin-top:20rpx;
 box-shadow:-1px -1px 10rpx #eef1f3;
 }
 
-.addNote{
- width:240rpx;
-height:60rpx;
-border:1rpx solid red;
-margin-left:240rpx;
-margin-top:50rpx;
-text-align:center;
-line-height:60rpx;
 
-  
-}
 .sign{
-  width: 710rpx;
+  /* width: 710rpx; */
   margin-left: 20rpx;
   margin-top: 20rpx;
   font-size: 28rpx;
