--- a/pages/indexo/indexo.wxss
+++ b/pages/indexo/indexo.wxss
@@ -9,7 +9,9 @@ margin-left:40rpx;
 padding-left:60rpx;
 font-size:28rpx;
 
-
+}
+.radius{
+  border-radius: 10rpx;
 }
 .search2{
 background-color:#f5f5f5;
