--- a/pages/updata/updata.wxml
+++ b/pages/updata/updata.wxml
@@ -1,4 +1,8 @@
 <!--pages/updata/updata.wxml-->
+<view class='top'><text class='title'>资料更新</text></view>
+<view  bindtap='goback' style='position:fixed;color:#000000;z-index:99;font-size:36rpx;left:10rpx;font-weight:bold;top:56rpx;' class='iconfont icon-fanhui'></view>
+<view bindtap='goIndex' style='z-index:99;position:fixed;color:#000000;font-size:40rpx;left:84rpx;font-weight:bold;top:56rpx;' class='iconfont icon-shouye'></view>
+<view class='pad'></view>
 <view class='nav'>
   <view bindtap='upImg' class='header'>
     <!-- <view wx:if="{{userInfo.headimg==null}}" class='header-img'>
