--- a/pages/upnick/upnick.wxml
+++ b/pages/upnick/upnick.wxml
@@ -1,5 +1,8 @@
 <!--pages/upnick/upnick.wxml-->
-
+<view class='top'><text class='title'>昵称</text></view>
+<view bindtap='goback' style='position:fixed;color:#000000;z-index:99;font-size:36rpx;left:10rpx;font-weight:bold;top:56rpx;' class='iconfont icon-fanhui'></view>
+<view bindtap='goIndex' style='z-index:99;position:fixed;color:#000000;font-size:40rpx;left:84rpx;font-weight:bold;top:56rpx;' class='iconfont icon-shouye'></view>
+<view class='pad'></view>
 <view class='f28 ml20 head'>昵称请填写2-24个字符</view>
 <input bindblur='upnick' value='{{nick}}' maxlength='24' minlength="2" class='nick'>
   
