--- a/pages/attention/attention.wxml
+++ b/pages/attention/attention.wxml
@@ -1,11 +1,18 @@
 <!--pages/attention/attention.wxml-->
-<view class='item'>
-  <image class='image' src='../../images/pic01.jpg'></image>
+<view class='top'><text class='title'>{{nick}}</text></view>
+<view wx:if="{{getshare==0}}" bindtap='goback' style='position:fixed;color:#000000;z-index:99;font-size:36rpx;left:10rpx;font-weight:bold;top:56rpx;' class='iconfont icon-fanhui'></view>
+<view bindtap='goIndex' style='z-index:99;position:fixed;color:#000000;font-size:40rpx;left:84rpx;font-weight:bold;top:56rpx;' class='iconfont icon-shouye'></view>
+<view class='pad'></view>
+<view wx:for="{{list}}">
+<view  class='item'>
+  <image data-id='{{item.id}}' bindtap='userinfo' class='image' src='{{item.headimg}}'></image>
   <view class='name'>
-    <view class='name1'>张大锅</view>
-    <view class='name2'>50个笔记,200个粉丝</view>
+    <view class='name1'>{{item.nick}}</view>
+    <view class='name2'>{{item.num}}个笔记,{{item.fan}}个粉丝</view>
 
   </view>
-  <view class='att'>已关注</view>
+  <view data-index="{{index}}" data-id='{{item.id}}' bindtap='cancel' wx:if="{{item.attent==1}}" class='att'>已关注</view>
+  <view data-index="{{index}}" data-id='{{item.id}}' bindtap='attented' wx:if="{{item.attent==0}}" class='att2'>关注</view>
 </view>
 <view class='line'></view>
+</view>
