--- a/pages/attention/attention.wxss
+++ b/pages/attention/attention.wxss
@@ -40,6 +40,21 @@ text-align:center;
 padding-top:5rpx;
 
 }
+.att2{
+  width:120rpx;
+height:43rpx;
+border:1rpx solid red;
+color:#fff;
+background-color: red;
+font-size:28rpx;
+border-radius:12rpx;
+position:absolute;
+right:30rpx;
+margin-top:23rpx;
+text-align:center;
+padding-top:5rpx;
+
+}
 .line{
   width: 100%;
   height: 4rpx;
