--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,49 +1,53 @@
 /* pages/detail/detail.wxss */
-.swiper{
+
+.swiper {
   width: 100%;
-  
 }
-.swiper-item{
+
+.swiper-item {
   width: 100%;
-  
-  
-  display:flex;
+  display: flex;
 }
-.swiper-item image{
+
+.swiper-item image {
   width: 750rpx;
-  align-self:center;
+  align-self: center;
 }
-.footer{
+
+.footer {
   position: fixed;
   bottom: 0rpx;
   width: 100%;
   height: 80rpx;
-  background-color: #333333;
+  background-color: #333;
   padding-top: 25rpx;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
 }
-.line{
+
+.line {
   width: 4rpx;
   height: 50rpx;
   background-color: #fff;
-
+  position: absolute;
+  left: 373rpx;
 }
-.zan{
-margin-left:20rpx;
-width:710rpx;
-margin-top:50rpx;
-font-size:26rpx;
-color:#d6d6d6;
 
+.zan {
+  margin-left: 20rpx;
+  width: 710rpx;
+  margin-top: 50rpx;
+  font-size: 26rpx;
+  color: #d6d6d6;
 }
-.contain{
-  width:100%;
+
+.contain {
+  width: 100%;
   height: auto;
   margin-bottom: 140rpx;
 }
-.user{
+
+.user {
   width: 710rpx;
   height: 80rpx;
   margin-left: 20rpx;
@@ -52,30 +56,42 @@ color:#d6d6d6;
   flex-direction: row;
   border-bottom: 1rpx solid #ddd;
 }
-.user image{
+
+.user image {
   width: 60rpx;
   height: 60rpx;
   border-radius: 50%;
-
 }
-.nick{
+
+.nick {
   margin-left: 20rpx;
   font-size: 30rpx;
   font-weight: bold;
-  margin-top:10rpx;
-
+  margin-top: 10rpx;
 }
-.content{
+
+.content {
   margin-left: 20rpx;
   margin-top: 20rpx;
   font-size: 28rpx;
   width: 710rpx;
+  display: block;
 }
-.count{
-  position:absolute;
-right:20rpx;
-margin-top:-60rpx;
-color:#fff;
 
+.count {
+  position: absolute;
+  right: 20rpx;
+  margin-top: -60rpx;
+  color: #fff;
+}
 
+.share {
+  background-color: #333;
+  line-height: 60rpx;
+  height: 60rpx;
+  width: 85rpx;
+}
+
+.share::after {
+  border: none;
 }
