--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,67 +1,73 @@
 <!--pages/search/search.wxml-->
-<view hidden="{{inputShowed}}" bindtap="showInput" class='nav'>
-  <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:999' class='iconfont icon-sousuokuang'></view>
-  <view hover-class='none'>
-    <input class="search" placeholder="大家都在搜" placeholder-class="search-p"></input>
-  </view>
-</view>
-<view hidden="{{!inputShowed}}" class='nav'>
-  <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:999' class='iconfont icon-sousuokuang'></view>
-  <view hover-class='none'>
-    <input value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" class="search2" placeholder="大家都在搜" placeholder-class="search-p"></input>
-  </view>
-  <view class="cancel" bindtap="hideInput">取消</view>
-  <view class="cancel" wx:if="{{inputVal!=''}}" bindtap="getList">搜索</view>
-</view>
-<view class='body'>
-  <view class='title'>
-    #{{title}}
-  </view>
-  <view class='number'>搜索到{{list.length}}篇笔记</view>
-  <view wx:if="{{list!=null}}" class="content">
-    <view class="left">
-      <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
-        <!-- <template is="item" data="{{...item}}" ></template> -->
-        <navigator url="../detail/detail?id={{item.id}}" class="item">
-          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
-          <view class="item-title-box">
-            <view class="item-title">{{item.content}}</view>
-          </view>
-        </navigator>
-        <view class='headimg'>
-          <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-          <view class='nick'>{{item.created_by.nick}}</view>
-          <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-          <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
-          <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
-          <view class='numb' wx:if="{{item.collection==null}}">0</view>
-        </view>
-
-      </view>
-    </view>
-    <view class="right">
-      <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
-        <!-- <template is="item" data="{{...item}}" wx:if="{{index%2==1}}"></template> -->
-        <navigator url="../detail/detail?id={{item.id}}" class="item">
-          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
-          <view class="item-title-box">
-            <view class="item-title">{{item.content}}</view>
-          </view>
-        </navigator>
-        <view class='headimg'>
-          <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-          <view class='nick'>{{item.created_by.nick}}</view>
-          <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-          <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
-          <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
-          <view class='numb' wx:if="{{item.collection==null}}">0</view>
-        </view>
-
-      </view>
+<view class='topone'>
+  <view class='top'>搜索</view>
+  <view wx:if="{{getshare==0}}" bindtap='goback' style='position:fixed;color:#000000;z-index:99;font-size:36rpx;left:10rpx;font-weight:bold;top:56rpx;' class='iconfont icon-fanhui'></view>
+  <view bindtap='goIndex' style='z-index:99;position:fixed;color:#000000;font-size:40rpx;left:84rpx;font-weight:bold;top:56rpx;' class='iconfont icon-shouye'></view>
+  <view class='pad'></view>
+  <view hidden="{{inputShowed}}" bindtap="showInput" class='nav'>
+    <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
+    <view hover-class='none'>
+      <input class="search" placeholder="大家都在搜" placeholder-class="search-p"></input>
     </view>
   </view>
-
-  <view wx:if="{{list==null}}" class='body'>
-    对不起，暂无搜索结果
+  <view hidden="{{!inputShowed}}" class='nav'>
+    <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
+    <view hover-class='none'>
+      <input value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" class="search2" placeholder="大家都在搜" placeholder-class="search-p"></input>
+    </view>
+    <view class="cancel" bindtap="hideInput">取消</view>
+    <view class="cancel" wx:if="{{inputVal!=''}}" bindtap="getList">搜索</view>
   </view>
-</view>
+  </view>
+  <view class='body'>
+    <view class='title'>
+      #{{title}}
+    </view>
+    <view class='number'>搜索到{{list.length}}篇笔记</view>
+    <view wx:if="{{list!=null}}" class="content">
+      <view class="left">
+        <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
+          <!-- <template is="item" data="{{...item}}" ></template> -->
+          <navigator url="../detail/detail?id={{item.id}}" class="item">
+            <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+            <view class="item-title-box">
+              <view class="item-title">{{item.content}}</view>
+            </view>
+          </navigator>
+          <view class='headimg'>
+            <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
+            <view class='nick'>{{item.created_by.nick}}</view>
+            <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+            <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+            <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
+            <view class='numb' wx:if="{{item.collection==null}}">0</view>
+          </view>
+
+        </view>
+      </view>
+      <view class="right">
+        <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
+          <!-- <template is="item" data="{{...item}}" wx:if="{{index%2==1}}"></template> -->
+          <navigator url="../detail/detail?id={{item.id}}" class="item">
+            <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+            <view class="item-title-box">
+              <view class="item-title">{{item.content}}</view>
+            </view>
+          </navigator>
+          <view class='headimg'>
+            <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
+            <view class='nick'>{{item.created_by.nick}}</view>
+            <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+            <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" bindtap='nocollect' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+            <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
+            <view class='numb' wx:if="{{item.collection==null}}">0</view>
+          </view>
+
+        </view>
+      </view>
+    </view>
+
+    <view wx:if="{{list==null}}" class='body'>
+      对不起，暂无搜索结果
+    </view>
+  </view>
